test/optimizations/localon/local-block.good
{x = 5}
{x = local-block.chpl:12: error: cannot access remote data in local block
